Maybe fix the weird <code> alignment issue

--- a/apps/frontend/scss/core.scss
+++ b/apps/frontend/scss/core.scss
@@ -117,6 +117,7 @@ h6 {
 code {
     background: $thing-background;
     color: #ffffaa;
+    vertical-align: 1px;
     // padding: 0 0.2rem;
 }
 
